fix: uniformize spacing next to separators

--- a/src/app/components/arlas-wui-root/arlas-wui-root.component.scss
+++ b/src/app/components/arlas-wui-root/arlas-wui-root.component.scss
@@ -498,7 +498,7 @@
   }
 
   .arlas-filters-chips-top {
-    padding-left: $default-spacing;
+    padding-left: $sm-spacing;
 
     ::ng-deep.zoom {
       position: relative;
